# braint

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile
.atl/: skill-registry.md
.github/workflows/: ci.yml
crates/braint-cli/: Cargo.toml
crates/braint-cli/src/: args.rs  error.rs  lib.rs  main.rs  output.rs
crates/braint-cli/src/commands/: cancel.rs  confirm.rs  ingest.rs  mod.rs
crates/braint-cli/src/tui/: app.rs  event_loop.rs  mod.rs
crates/braint-cli/src/tui/panels/: activity.rs  mod.rs  scratch.rs
crates/braint-cli/tests/: tui_render.rs
crates/braint-client/: Cargo.toml
crates/braint-client/src/: client.rs  error.rs  framing.rs  lib.rs
crates/braint-core/: Cargo.toml
crates/braint-core/src/: clock.rs  error.rs  lib.rs  parse.rs
crates/braint-core/src/parse/: mod.rs  verb.rs
crates/braint-core/tests/: verb_grammar.rs
crates/braint-daemon/: Cargo.toml
crates/braint-daemon/src/: config.rs  error.rs  lib.rs  main.rs  pending.rs
crates/braint-daemon/src/handler/: confirm.rs  ingest.rs  list.rs  mod.rs  subscribe.rs
crates/braint-daemon/src/plugin/: handle.rs  lifecycle.rs  mod.rs  router.rs
crates/braint-daemon/src/server/: connection.rs  mod.rs  state.rs
crates/braint-daemon/src/storage/: connection.rs  entry.rs  mod.rs  query.rs
crates/braint-daemon/src/storage/migrations/: 0001_entries.sql  0002_tags.sql  mod.rs
crates/braint-daemon/src/subscription/: filter.rs  mod.rs
crates/braint-daemon/tests/: confirm_e2e.rs  ingest_e2e.rs  plugin_debug_test.rs  plugin_governance_test.rs  plugin_hello_e2e.rs  subscribe_e2e.rs
crates/braint-daemon/tests/common/: mod.rs
crates/braint-plugin-hello/: Cargo.toml
crates/braint-plugin-hello/src/: main.rs
crates/braint-plugin-sdk/: Cargo.toml
crates/braint-plugin-sdk/src/: error.rs  lib.rs  transport.rs
crates/braint-proto/: Cargo.toml
crates/braint-proto/src/: entry.rs  error_codes.rs  jsonrpc.rs  lib.rs  method.rs  plugin.rs
crates/braint-storage/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ARCHITECTURE.md  personal-daemon-build-plan.md  personal-daemon-idea.md  personal-daemon-mvp.md  personal-daemon-phase-details.md  personal-daemon-tech.md  phase-1-implementation-plan.md
examples/voxtype-route-a/: README.md  hyprland-keybinds.conf  voxtype-to-braint.sh
openspec/: config.yaml
openspec/changes/workspace-skeleton/: design.md  proposal.md  spec.md  tasks.md
