[workspace]
resolver = "3"
members = [
  "crates/braint-proto",
  "crates/braint-core",
  "crates/braint-client",
  "crates/braint-daemon",
  "crates/braint-cli",
  "crates/braint-plugin-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["braint contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattszeindev/braint"

[workspace.dependencies]
tokio = { version = "1.40", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "process",
  "io-util",
  "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
interprocess = { version = "2.2", features = ["tokio"] }
notify = "8.2"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.14"
directories = "5"
toml = "0.8"
is-terminal = "0.4"
futures = "0.3"
libc = "0.2"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
