[package]
name = "braint-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "braint"
path = "src/main.rs"

[dependencies]
braint-client = { path = "../braint-client" }
braint-core = { path = "../braint-core" }
braint-proto = { path = "../braint-proto" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
