[package]
name = "braint-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
braint-proto = { path = "../braint-proto" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "net"] }
interprocess = { workspace = true }
