[package]
name = "braint-daemon"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "braintd"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
braint-client = { path = "../braint-client" }

[dependencies]
braint-client = { path = "../braint-client" }
braint-core = { path = "../braint-core" }
braint-proto = { path = "../braint-proto" }
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "process"] }
interprocess = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
libc = { workspace = true }
