[package]
name = "braint-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
braint-core = { path = "../braint-core" }
braint-proto = { path = "../braint-proto" }
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
